# algorithmen

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
0_Playground/: CMakeLists.txt  Simple_Calc  Simple_Calc.cpp
2_Fundamentale_Algorithmen/: CMakeLists.txt:Zone.Identifier
